--- a/webcore/WEB-INF/web.xml
+++ b/webcore/WEB-INF/web.xml
@@ -5,8 +5,8 @@
 	<display-name>Modular J2EE</display-name>
 	<context-param>
 		<param-name>contextClass</param-name>
-<!-- 		<param-value>org.springframework.osgi.web.context.support.OsgiBundleXmlWebApplicationContext</param-value> -->
-		<param-value>org.eclipse.virgo.web.dm.ServerOsgiBundleXmlWebApplicationContext</param-value>
+		<param-value>org.springframework.osgi.web.context.support.OsgiBundleXmlWebApplicationContext</param-value>
+		<!-- <param-value>org.eclipse.virgo.web.dm.ServerOsgiBundleXmlWebApplicationContext</param-value> -->
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
